outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-28_00-20-56/evaluations/problem_eval-1966249938374092262_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defaulting to the destination node when direct distance is sufficiently short. Design idea: Combine the ratio-based heuristic of No.1 with the 2-step lookahead mechanism of No.2 to balance short-term and long-term optimization while prioritizing nodes with a high remaining distance to destination ratio.}
                                                                                                                                                                                                                                                                                                                    ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defaulting to the destination node when direct distance is sufficiently short. Design idea: Combine the ratio-based heuristic of No.1 with the 2-step lookahead mechanism of No.2 to balance short-term and long-term optimization while prioritizing nodes with a high remaining distance to destination ratio.}
                                                                                                                                                                                                                                                                                                                    ^
SyntaxError: unmatched '}'
